# mix_simulator

./: .clang-format  .gitignore  CMakeLists.txt  README.md  add_shader.sh  gen_docs.sh  main.cpp  run.sh
data/IBL/: output_iem.hdr  output_pmrem.hdr
data/IBL/clouds/: output_iem.hdr  output_pmrem.hdr
data/IBL/newport_loft/: output_iem.hdr
data/blender/: cerberus.blend  cerberus.blend1  gold_cube.blend  gold_sphere.blend  rusted_sphere.gltf  rusty_sphere.blend1  textured_sphere.blend  textured_sphere.blend1
data/models/: gold_sphere.gltf  monkey.glb  rusted_sphere.gltf  rusty_sphere.gltf  sphere.mtl  textured_sphere.mtl
include/windows/assimp/: module.modulemap
media/captures/: cube_mesh.rdc
media/docs/: INSTALL.md  README.md  TODO.md
media/planning/: engine.drawio
src/: arena.cpp  arena.hpp  bones.cpp  bones.hpp  camera.hpp  clock.cpp  clock.hpp  engine.cpp  engine.hpp  engine_types.hpp  fonts.cpp  fonts.hpp  ibl.cpp  ibl.hpp  iohandler.cpp  iohandler.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  postprocessing.cpp  postprocessing.hpp  shader.cpp  shader.hpp  shapes.cpp  shapes.hpp  texture.cpp  texture.hpp  timer.cpp  timer.hpp  util.hpp  window.cpp  window.hpp
src/shaders/: add_shader.py  animationPBR.frag  animationPBR.vert  bloomSS.frag  bloomSS.vert  cube.frag  cube.vert  cubeMap.vert  downSample.frag  erCubeMapConvert.frag  irConvolution.frag  lightPBR.frag  lightPBR.vert  prefilter.frag  screenShader.frag  screenShader.vert  shaders.json  skybox.frag  skybox.vert  texturePBR.frag  texturePBR.vert  triangle.frag  triangle.vert  upSample.frag  upSample.vert
src/shaders/builtin/: rect.frag  texture.frag  texture.vert
util/: combine_mr.py
v1/: iohandler.cpp
